--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,67 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login / Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        html, body {
-            height: 100%;
-        }
-        body {
-            background-color: #f8f9fa;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-        }
-        .card {
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 0 20px rgba(0,0,0,0.1);
-            width: 100%;
-            max-width: 800px;
-        }
-        .card-left {
-            background-color: #8e44ad;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 2rem;
-            height: 100%;
-            height: 455px;
-        }
-        .card-right {
-            padding: 2rem;
-        }
-        .btn-purple {
-            background-color: #8e44ad;
-            border-color: #8e44ad;
-            color: white;
-        }
-        .btn-purple:hover {
-            background-color: #732d91;
-            border-color: #732d91;
-            color: white;
-        }
-        .form-text {
-            color: red;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            height: 20px;
-            margin-top: 5px;
-        }
-        .form-text.visible {
-            opacity: 1;
-        }
-        .input-group {
-            margin-bottom: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="container">
